[package]
name = "pmtiles2"
version = "0.1.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/arma-place/pmtiles-rs/"
documentation = "https://docs.rs/pmtiles2"
readme="README.md"
description = "A low level implementation of the PMTiles format based on the standard Read and Write trait."
categories = ["encoding", "parser-implementations", "parsing"]
keywords = ["pmtiles", "format", "pmtile", "encoding", "decoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]

[dependencies]
hilbert_2d = "1"
deku = "0.15"
integer-encoding = { version = "3.0", features=["futures_async"] }
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", optional=true, features = ["derive"] }
brotli = "3.3"
zstd = { version = "0.11", default-features = false }
ahash = { version = "0.8.2", default-features = false, features=["std", "no-rng"] }
futures = "0.3.25"
async-compression = { version = "0.3.15", features = ["futures-io", "zstd", "gzip", "brotli"] }
duplicate = "1.0.0"
async-recursion = "1.0.4"

[dev-dependencies]
temp-dir = "0.1"
tokio-test = "0.4.2"
