[package]
name = "pmtiles2"
version = "0.2.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/arma-place/pmtiles-rs/"
documentation = "https://docs.rs/pmtiles2"
readme="README.md"
description = "A low level implementation of the PMTiles format based on the standard Read and Write (or AsyncRead and AsyncWrite) traits."
categories = ["encoding", "parser-implementations", "parsing"]
keywords = ["pmtiles", "format", "pmtile", "encoding", "decoding"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
async = ["dep:futures", "dep:async-compression", "dep:async-recursion", "integer-encoding/futures_async"]

[dependencies]
hilbert_2d = "1"
deku = "0.15"
integer-encoding = "3.0"
flate2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", optional=true, features = ["derive"] }
brotli = "3.3"
zstd = { version = "0.11", default-features = false }
ahash = { version = "0.8.2", default-features = false, features=["std", "no-rng"] }
futures = { version = "0.3.25", optional = true }
async-compression = { version = "0.3.15", optional = true, features = ["futures-io", "zstd", "gzip", "brotli"] }
duplicate = "1.0.0"
async-recursion = { version = "1.0.4", optional = true }

[dev-dependencies]
temp-dir = "0.1"
tokio = { version = "1.27.0", features = ["fs"] }
tokio-test = "0.4.2"
tokio-util = { version = "0.7.7", features = ["compat"] }
